[tool.poetry]
name = "async-dash"
version = "0.2.0"
description = "Async port of the official Plotly Dash library"
authors = ["Snehil Vijay <snehilvj@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/snehilvj/async-dash"
repository = "https://github.com/snehilvj/async-dash"
documentation = "https://github.com/snehilvj/async-dash"
keywords = ["dash", "plotly", "async", "quart", "flask"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Dash",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Database :: Front-Ends",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Widget Sets",
]

[tool.poetry.dependencies]
python = ">=3.7"
dash = "^2.2.0"
quart = "^0.19.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
